# qemu-Xuantie

./: MAINTAINERS  configure  csky-trace.c  gdbstub.c  meson.build  qemu-options.hx  tracestub.c
configs/devices/: cskyv1eb-softmmu.mak  cskyv2eb-softmmu.mak
configs/targets/: cskyv1-softmmu.mak  cskyv1eb-linux-user.mak  cskyv2-linux-user.mak  cskyv2-softmmu.mak  cskyv2eb-linux-user.mak  cskyv2eb-softmmu.mak
csky-scripts/: func_statis.py  func_statis_v2.py  linux_build.sh  range_statis.py  simproxy.py  ubuntu_packages.sh  windows_build.sh
cskysim/: .gitignore  Makefile  cskysim.c
disas/: csky.c  meson.build  riscv.c
docs/csky/: build.rst  conf.py  cskysim.rst  index.rst  introduction.rst  quick_start.rst  user_space_emulator.rst
fpu/: softfloat-parts.c.inc  softfloat.c
gdb-xml/: csky-abiv1-linux-user-core.xml  csky-abiv2-linux-user-core.xml
hw/: Kconfig  meson.build
hw/audio/: Kconfig  csky_iis.c  meson.build
hw/block/: Kconfig  csky_nfc.c  meson.build
hw/char/: Kconfig  csky_uart.c  csky_uart_dummy.c  meson.build
hw/csky/: Kconfig  csky_boot.c  deimos.c  dummyh.c  dynsoc.c  eragon.c  hobbit1_v2.c  meson.build  smart_card.c  smarth.c  smartl.c  trilobite.c  trilobite_v2.c  virt.c  yunvoice_v2.c
hw/display/: Kconfig  csky_lcd_template.h  csky_lcdc.c  meson.build
hw/dma/: Kconfig  csky_dma.c  meson.build
hw/intc/: Kconfig  csky_intc.c  csky_mic.c  csky_tcip_v1.c  (+5 more)
include/: elf.h
linux-user/: elfload.c  main.c  syscall.c  syscall_defs.h
semihosting/: arm-compat-semi.c
softmmu/: arch_init.c  qdev-monitor.c  vl.c
util/: log.c  module.c
(+1886 files in other folders)
